- Switched dashboard to use gridcontrol, so there can be elements that span columns - Added estimated time until alarm - Changed pit delta to go in the same spot as time until alarm (3 columns instead of 4) - Changed samples to be an array instead of a linked list, since I didn't end up needing that